Fix programs section spacing

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,10 +1,12 @@
 html {
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Roboto Slab', serif;
 }
 
 .intro-container{
     margin-top: 25px;
     padding-top: 10px;
+    /* background-color: blue; */
+    font-family: 'Roboto Slab', serif;
 }
 
 .intro-title{
@@ -28,12 +30,32 @@ html {
 }
 
 .card{
-    width: 18rem;
+    /* width: 18rem; */
+    /* max-width: 50%; */
 }
 
-.div-programs{
-    background-color: red;
-    display: flex;
+.programs-div{
+    /* background-color: red; */
+    padding-top: 15px; 
+    padding-bottom: 15px;
+    font-family: 'Roboto Slab', serif;
+}
+
+.programs-header{
+    text-align: center;
+}
+
+.hoops-school-card{
+    margin-right: 10px;
+}
+
+.lil-ballers-card{
+    margin-left: 5px;
+    margin-right: 10px;
+}
+
+.lil-ballers-league-card{
+    /* margin-left: 15px; */
 }
 
 .logo{
